360/src/objects/Tile__c.object
<CustomObject>
    <fields>
        <fullName>IsExternal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsExternal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tile_Icon__c</fullName>
        <label>Tile Icon</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tile_URL__c</fullName>
        <label>Tile URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Tile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>